# TandemX

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml
benchmarks/: README.md  environment.external-tools.yml
benchmarks/configs/: external_tool_comparison.yaml  synthetic_scale.yaml
benchmarks/scripts/: analyze_external_tool_comparison.py  check_known_repeats_against_catalog.py  compare_tandemx_runs.py  inspect_reads.py  render_discover_catalog_report.py  run_external_tool_comparison.py  run_pipeline_benchmark.py  run_real_read_pilot_benchmark.py  run_synthetic_benchmark.py
docs/: algorithms.md  benchmark_plan.md  current_status.md  design.md  file_formats.md  known_limitations.md  mvp_status.md  performance.md  publication_plan.md  real_data_pilot_plan.md  rice_known_repeat_validation.md  roadmap.md  sensitivity_validation.md
examples/toy/: README.md  run_toy_workflow.sh
rust-core/: Cargo.toml
rust-core/src/: lib.rs
tandemx/: __init__.py  annotation.py  cli.py  pipeline.py  reporting.py  run_compare.py  sensitivity.py
tandemx/compare/: __init__.py  mvp.py
tandemx/discover/: __init__.py  mvp.py  rust_backend.py  spacing.py
tandemx/io/: __init__.py  sequences.py  validators.py
tandemx/locate/: __init__.py  mvp.py
tandemx/probe/: __init__.py  mvp.py
tandemx/quantify/: __init__.py  mvp.py
tandemx/simulate/: __init__.py  toy.py
tandemx/utils/: __init__.py  kmers.py  progress.py  threads.py
tandemx/visualize/: __init__.py  discover_catalog.py  mvp.py
tests/integration/: test_benchmark_tiny.py  test_cli.py  test_probe_mvp_cli.py  (+17 more)
(+19 files in other folders)
