[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tandemx"
version = "0.1.0"
description = "Skeleton for a read-first, assembly-aware tandem repeat analysis toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "TandemX developers" }
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=7"
]

[project.scripts]
tandemx = "tandemx.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
